tests/conformance/typecheck/invalid/non_bool_condition.ks
// EXPECT: Bool
// Non-boolean condition in if
val x = if (1) 2 else 3
